# aleo-remote-prover

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
deploy/: aleo-prover.service  install-service.sh
packaging/: remote-prover.default  remote-prover.service
packaging/debian/: postinst  prerm
scripts/: authorize_call.sh  build_deb.sh
src/: config.rs  lib.rs  main.rs  model.rs  programs.rs  proving.rs  server.rs
tests/: prover_api.rs
