[package]
name = "remote-prover"
version = "0.1.2"
edition = "2021"

[features]
default = ["testnet"]
testnet = []
mainnet = []

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
dotenvy = "0.15"
rand = "0.8"
snarkvm = { version = "4.0" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
